--- a/index.html
+++ b/index.html
@@ -224,7 +224,8 @@
 
             <div>
                 <h3>Quick Links</h3>
-                <p>Home</p>
+                <a href="index.html"><p>Home</p></a>
+                
                 
                 <p>Blog</p>
                 <p>Contact</p>
